@@ -90,6 +90,8 @@
 52. If replacing playqueue with a stream, then start playing when added.
 53. Fix restoring of alternate size. e.g. fix restore of collapsed size if
     started expanded - and vice versa.
+54. Recreate menubar for KDE4 build when run under unity. (Qt builds already
+    had this)
 
 0.9.2
 -----
